tests/simple/src/bad/null-deref_wrong-check-2.c
#include <stdio.h>

int main() {
  int *ptr = NULL;

  if (!ptr) {
    *ptr = 0xdeadbeef;
  }
  return 0;
}
